implemented typescript support. restructured critter components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,10 @@
 {
-  "compilerOptions": {},
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "**/*.spec.ts"]
-
+  "compilerOptions": {
+    "target": "ES6",
+    "jsx": "react-jsx",
+    "esModuleInterop": true,
+  },
+  "strict": true,
+  "include": ["./src/**/*"],
+  "exclude": ["node_modules", "**/*.spec.ts"],
 }
