--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "ES6",
     "jsx": "react-jsx",
     "esModuleInterop": true,
+    "moduleResolution": "Node",
   },
   "strict": true,
   "include": ["./src/**/*"],
