--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "electronic-life-react",
   "version": "1.0.0",
-  "description": "",
+  "description": "A digital world of random critters",
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode production",
     "dev": "webpack serve --mode development"
   },
-  "author": " <Daniel Doull> (none)",
+  "author": " <Daniel Doull> dmdoull43@gmail.com",
   "license": "MIT",
   "dependencies": {
     "prop-types": "^15.7.2",
