--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-dom": "^17.0.9",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.2.0",
+    "gh-pages": "^3.2.3",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^2.1.0",
