--- a/.babelrc
+++ b/.babelrc
@@ -2,5 +2,19 @@
   "presets": [
     "@babel/preset-env",
     "@babel/preset-react"
+  ],
+  "plugins": [
+    "@babel/plugin-transform-arrow-functions",
+    "@babel/plugin-proposal-class-properties",
+    [
+      "module-resolver",
+      {
+        "root": "./src",
+        "extensions": [".js", ".scss", ".css", ".json", ".svg"],
+        "alias": {
+          "@": "./src"
+        }
+      }
+    ]
   ]
 }
