--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@babel/preset-react": "^7.16.0",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.8.0",
+    "@typescript-eslint/parser": "^5.8.0",
     "babel-loader": "^8.2.3",
     "babel-plugin-module-resolver": "^4.1.0",
     "css-loader": "^6.5.1",
