--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
+    "baseUrl": ".",
     "esModuleInterop": true,
     "jsx": "react",
     "module": "es6",
@@ -9,7 +10,8 @@
     "noImplicitAny": true,
     "outDir": "./dist/",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@": ["./src"]
     },
     "sourceMap": true,
     "target": "es5"
