--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "electronic-life-react",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
     "build": "webpack --mode production",
     "dev": "webpack serve --mode development"
@@ -16,12 +16,19 @@
   },
   "devDependencies": {
     "@babel/core": "^7.14.8",
+    "@babel/eslint-parser": "^7.19.1",
     "@babel/preset-env": "^7.14.8",
     "@babel/preset-react": "^7.14.5",
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
+    "@typescript-eslint/eslint-plugin": "^5.48.2",
+    "@typescript-eslint/parser": "^5.48.2",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.2.0",
+    "eslint": "^8.32.0",
+    "eslint-plugin-react": "^7.32.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "fork-ts-checker-webpack-plugin": "^7.3.0",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^2.1.0",
