--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,21 @@
 {
-  "compilerOptions": {},
+  "compilerOptions": {
+    "allowJs": true,
+    "allowSyntheticDefaultImports": true,
+    "baseUrl": "src",
+    "esModuleInterop": true,
+    "jsx": "react",
+    "module": "ES2022",
+    "moduleResolution": "Node",
+    "noImplicitAny": true,
+    "alwaysStrict": true,
+    "outDir": "./dist/",
+    "paths": {
+      "@/*": ["*"]
+    },
+    "sourceMap": true,
+    "target": "ES2022"
+  },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*.spec.ts"]
 
