--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "electronic-life-react",
-  "version": "1.0.0",
+  "name": "electronic-life",
+  "version": "2.0.0",
   "description": "",
   "main": "src/index.ts",
   "scripts": {
@@ -8,8 +8,8 @@
     "dev": "webpack serve --mode development",
     "test": "jest --watchAll"
   },
-  "author": " <Daniel Doull> (none)",
-  "license": "MIT",
+  "author": "Daniel Doull dmdoull43@gmail.com",
+  "license": "GPL-3.0-only",
   "dependencies": {
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
